Fix overflow

--- a/app/client/components/Modal/Modal.css
+++ b/app/client/components/Modal/Modal.css
@@ -2,25 +2,21 @@
 
 .root {
   font-weight: normal;
-  max-height: 100%;
-  overflow: auto;
   width: 550px;
   background-color: white;
   color: #7f7d94;
   font-size: 14px;
+  margin: 40px auto;
 }
 
-.overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 
+.overlay {
   position: fixed;
   top: 0;
-  bottom: 0;
+  height: 100%;
   right: 0;
   left: 0;
+  overflow: scroll;
 
   z-index: 10000;
   background: rgba(0, 0, 0, .8);
